test/asm/lexer-hack.err
error: lexer-hack.asm(22):
    "Label1" is not a macro
error: lexer-hack.asm(24):
    'mac' already defined at lexer-hack.asm(1)
error: lexer-hack.asm(27):
    Macro "undef" not defined
error: lexer-hack.asm(28):
    Macro "undef" not defined
Assembly aborted with 4 errors!
